import java.util.UUID
import co


class DeductFromSalary extends PaymentMethod {
    // constructor
    public UPIPayment() {
    }

    @Override
    public void processPayment(double amount, ) {
        // Implement the payment logic specific to DeductFromSalary
        
    }


}