package com.se24.smartvehiclebooking.payment;


class internetBanking extends PaymentMethod {
    // constructor
    public internetBanking() {
    }

    @Override
    public void processPayment(double amount, ) {
        // Implement the payment logic specific to CardPayment
        
    }


}